overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,6 @@
 }
 
 @media (max-width: 768px) {
-  body,
-  html {
-    overflow-x: hidden;
-  }
-
   .text-stroke-outside {
     -webkit-text-stroke: 2px white;
   }
